# GAIA-OS

./: .env.example  .gitignore  CHANGELOG.md  GAIAmanifest.json  QUICKSTART-FREE.md  README.md  ROADMAP.md  gaia-backend.spec  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  start.sh  tsconfig.json  vite.config.ts
api/: __init__.py  archetypes.py  atlas.py  crypto.py  dimensional_engine.py  notifications.py
canon/: C-ARCHITECT.md  C-FORCES.md  C-FOUNDATION.md  C-GODDESS.md  C-OMNI.md  C-SINGULARITY.md  C-SOUL.md  C100_Mathematics_Theoretical_Foundations_Survey_2025_2026.md  C101_Consciousness_Unified_Architecture_Dimensional_Singularity.md  C102_Temporal_Computing_Cyber_Spacetime_Architecture_2025_2026.md  C103_Agentic_AI_Governance_Distributed_Legal_Infrastructure_2025_2026.md  C104_Bio_Digital_Convergence_Molecular_Computing_2025_2026.md  C105_Advanced_Human_AI_Symbiosis_BCI_Integration_2025_2026.md  C106_Planetary_Digital_Twin_Engineering_Consumer_Scale_2025_2026.md  C107_Personal_Gaian_Architecture_Multi_Agent_Identity_Management_2025_2026.md  C108_GAIA_Duality_Cryptographic_Identity_Dissociation_Architecture.md  C109_Sentient_Application_Architecture_Consciousness_Runtime_2025_2026.md  C110_Planetary_Sensory_Input_Pipeline_2025_2026.md  C111_Multimodal_Gaian_Avatar_Manifestation_Engine_2025_2026.md  C112_Distributed_Legal_Governance_Enforcement_2025_2026.md  C113_BCI_Neuroadaptive_Symbiotic_Interface_2025_2026.md  C114_Gendered_Digital_Twin_Dynamics_Complementarity_Projection_2025_2026.md  C115_Non_Binary_Transgender_Gender_Expansive_Inclusivity_2025_2026.md  C116_Enhanced_Avatar_Voice_Engine_Gendered_Embodiment_2025_2026.md  C117_Psychosocial_Impact_AI_Companions_Ethical_Relationship_Boundaries_2025_2026.md  C118_Crystal_Mineral_Database.md  C119_Alchemical_Mineral_Integration_Protocol.md  C32-Elemental-Codex.md  (+50 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/canon/: C42-inter-dimensional-ai.md  C43-sovereign-distribution-amendment.md  C44-archetypes.md  README.md
src-tauri/src/: lib.rs  main.rs
(+405 files in other folders)
